[gd_scene load_steps=39 format=3 uid="uid://da3tqj3m5lpc3"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_gjkee"]
[ext_resource type="PackedScene" uid="uid://48c4gt87x0i1" path="res://Objects/player_model.tscn" id="2_3kiwc"]
[ext_resource type="PackedScene" uid="uid://ds0p43gbtinbm" path="res://Objects/pistol.tscn" id="2_3o1w8"]
[ext_resource type="Script" path="res://Objects/player_synchronizer.gd" id="2_pfj5x"]
[ext_resource type="Texture2D" uid="uid://bk0xal5fph3lb" path="res://Graphics/Meshes/player_player.png" id="3_iqtbq"]
[ext_resource type="PackedScene" uid="uid://c12iijp3uibbu" path="res://Objects/sniper.tscn" id="3_o4fod"]
[ext_resource type="PackedScene" uid="uid://dj0kw8wv7i2jo" path="res://Objects/bazooka.tscn" id="4_gsvk4"]
[ext_resource type="PackedScene" uid="uid://d4ei2e4e1qf3l" path="res://Objects/UI/scoreboard.tscn" id="5_p5rfr"]
[ext_resource type="PackedScene" uid="uid://e6x2e401y71c" path="res://Objects/flamer.tscn" id="5_pcd2j"]
[ext_resource type="FontFile" uid="uid://p7sbyvx2o7pu" path="res://Graphics/Fonts/DIGIT-LCD.ttf" id="6_bjxa6"]
[ext_resource type="PackedScene" uid="uid://c5kiwpxpjprmm" path="res://Objects/UI/pause_menu.tscn" id="6_jfxdn"]
[ext_resource type="PackedScene" uid="uid://cmio8icdo5h3f" path="res://Objects/Gibs/gibs.tscn" id="7_k7k6i"]
[ext_resource type="PackedScene" uid="uid://bt8k6ddnuhgug" path="res://Objects/UI/settings.tscn" id="7_rjult"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_034fm"]
load_path = "res://.godot/imported/player_player.png-bdc1ffc7dd29727a34be4dd4d950b210.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s7j8k"]
resource_local_to_scene = true
albedo_texture = SubResource("CompressedTexture2D_034fm")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eoomt"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_r6fyg"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6rwji"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0m7p5"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0m8di"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_61nj3"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3y88v"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g72yf"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lmdc6"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lc2f3"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_whlfp"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_roty3"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_44ueg"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d1kc6"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x0oiv"]
resource_local_to_scene = true
albedo_texture = ExtResource("3_iqtbq")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7bk0o"]

[sub_resource type="Animation" id="Animation_00u7p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6jwrx"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.5, 0)]
}

[sub_resource type="Animation" id="Animation_xianb"]
resource_name = "respawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 1.5708), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathMenu:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8d5ss"]
_data = {
"RESET": SubResource("Animation_00u7p"),
"death": SubResource("Animation_6jwrx"),
"respawn": SubResource("Animation_xianb")
}

[sub_resource type="Gradient" id="Gradient_bfjf2"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0, 1, 0, 0.254902)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tyemr"]
gradient = SubResource("Gradient_bfjf2")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5yclh"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("Camera3D/Guns/Pistol:visible")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("Camera3D/Guns/Sniper:visible")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath("Camera3D/Guns/Bazooka:visible")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Camera3D/Guns:visible")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("Gibs/Organs:emitting")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("Gibs/Bones:emitting")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("username:text")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("playerModel/Chest Animator:current_animation")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath("playerModel/Pelvis Animator:current_animation")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath("playerModel/Chest:rotation")
properties/12/spawn = true
properties/12/replication_mode = 1

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_gjkee")

[node name="playerModel" parent="." instance=ExtResource("2_3kiwc")]
transform = Transform3D(-0.5, 0, 7.54979e-08, 0, 0.5, 0, -7.54979e-08, 0, -0.5, 0, -1, 0)

[node name="Pelvis" parent="playerModel" index="0"]
material_override = SubResource("StandardMaterial3D_s7j8k")
surface_material_override/0 = SubResource("StandardMaterial3D_eoomt")

[node name="LeftThigh" parent="playerModel/Pelvis" index="0"]
material_override = SubResource("StandardMaterial3D_r6fyg")

[node name="LeftKnee" parent="playerModel/Pelvis/LeftThigh" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, -0.0178276, -1.00973, -0.0161812)
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftShin" parent="playerModel/Pelvis/LeftThigh/LeftKnee" index="0"]
material_override = SubResource("StandardMaterial3D_0m7p5")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftFoot" parent="playerModel/Pelvis/LeftThigh/LeftKnee/LeftShin" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightThigh" parent="playerModel/Pelvis" index="1"]
material_override = SubResource("StandardMaterial3D_0m8di")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightKnee" parent="playerModel/Pelvis/RightThigh" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightShin" parent="playerModel/Pelvis/RightThigh/RightKnee" index="0"]
material_override = SubResource("StandardMaterial3D_61nj3")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightFoot" parent="playerModel/Pelvis/RightThigh/RightKnee/RightShin" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="Chest" parent="playerModel" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftShoulder" parent="playerModel/Chest" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftBicep" parent="playerModel/Chest/LeftShoulder" index="0"]
material_override = SubResource("StandardMaterial3D_3y88v")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftForearm" parent="playerModel/Chest/LeftShoulder/LeftBicep" index="0"]
material_override = SubResource("StandardMaterial3D_g72yf")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftHand" parent="playerModel/Chest/LeftShoulder/LeftBicep/LeftForearm" index="0"]
material_override = SubResource("StandardMaterial3D_lmdc6")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="LeftThumb" parent="playerModel/Chest/LeftShoulder/LeftBicep/LeftForearm/LeftHand" index="0"]
material_override = SubResource("StandardMaterial3D_lc2f3")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="Neck" parent="playerModel/Chest" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="Head" parent="playerModel/Chest/Neck" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="Cube_049" parent="playerModel/Chest/Neck/Head" index="0"]
material_override = SubResource("StandardMaterial3D_whlfp")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightShoulder" parent="playerModel/Chest" index="2"]
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightBicep" parent="playerModel/Chest/RightShoulder" index="0"]
material_override = SubResource("StandardMaterial3D_roty3")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightForearm" parent="playerModel/Chest/RightShoulder/RightBicep" index="0"]
material_override = SubResource("StandardMaterial3D_44ueg")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightHand" parent="playerModel/Chest/RightShoulder/RightBicep/RightForearm" index="0"]
material_override = SubResource("StandardMaterial3D_d1kc6")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="RightThumb" parent="playerModel/Chest/RightShoulder/RightBicep/RightForearm/RightHand" index="0"]
material_override = SubResource("StandardMaterial3D_x0oiv")
surface_material_override/0 = SubResource("StandardMaterial3D_6rwji")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_7bk0o")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.518173, -0.393375)

[node name="Aim" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -100)

[node name="Target" type="Node3D" parent="Camera3D/Aim"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -100)

[node name="ShootLocation" type="Marker3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Guns" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.518173, 0)

[node name="Pistol" parent="Camera3D/Guns" instance=ExtResource("2_3o1w8")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.704, 0.024, -0.724)

[node name="MeshInstance3D" parent="Camera3D/Guns/Pistol" index="0"]
transform = Transform3D(0.951078, 0.308951, 0, -0.308951, 0.951078, 0, 0, 0, 1, 0, 0, 0)

[node name="Sniper" parent="Camera3D/Guns" instance=ExtResource("3_o4fod")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.325, 0.2, -0.84)
visible = false

[node name="Bazooka" parent="Camera3D/Guns" instance=ExtResource("4_gsvk4")]
transform = Transform3D(0.139173, 0, 0.990268, 0, 1, 0, -0.990268, 0, 0.139173, 0.935, -0.37, -0.58)
visible = false

[node name="Flamer" parent="Camera3D/Guns" instance=ExtResource("5_pcd2j")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0.714753, 0, -0.253738)
visible = false

[node name="ShotgunContainer" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.518173, 0)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D2" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D3" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D4" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D5" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D6" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D7" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="RayCast3D8" type="RayCast3D" parent="Camera3D/ShotgunContainer"]
target_position = Vector3(0, 0, -100)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8d5ss")
}

[node name="DeathMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Respawn" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_left = 475.0
offset_top = 213.0
offset_right = 695.0
offset_bottom = 301.0
text = "Respawn"

[node name="Quit" type="Button" parent="DeathMenu"]
layout_mode = 0
offset_left = 494.0
offset_top = 329.0
offset_right = 679.0
offset_bottom = 401.0
text = "Quit
"

[node name="Crosshair" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
scale = Vector2(2, 2.142)
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="MeshInstance2D" type="Polygon2D" parent="Crosshair"]
position = Vector2(288, 146.36)
scale = Vector2(2, 2.142)
polygon = PackedVector2Array(0, -2, 2, 0, 0, 2, -2, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Gun Selection" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_top = 570.0
offset_right = 1154.0
offset_bottom = 646.0
texture = SubResource("GradientTexture2D_tyemr")

[node name="Gun Label" type="Label" parent="CanvasLayer/UI/Gun Selection"]
layout_mode = 0
offset_left = 10.0
offset_top = 11.0
offset_right = 220.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(1, 1, 1, 0.556863)
theme_override_fonts/font = ExtResource("6_bjxa6")
theme_override_font_sizes/font_size = 76
text = "Pistol"

[node name="Ammo" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 1019.0
offset_top = 495.0
offset_right = 1154.0
offset_bottom = 571.0
texture = SubResource("GradientTexture2D_tyemr")

[node name="Ammo Label" type="Label" parent="CanvasLayer/UI/Ammo"]
layout_mode = 0
offset_left = -74.0
offset_top = 11.0
offset_right = 133.0
offset_bottom = 84.0
theme_override_colors/font_color = Color(1, 1, 1, 0.556863)
theme_override_fonts/font = ExtResource("6_bjxa6")
theme_override_font_sizes/font_size = 76
text = "00"
horizontal_alignment = 2

[node name="Shield" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 1018.0
offset_top = 2.0
offset_right = 1153.0
offset_bottom = 78.0
texture = SubResource("GradientTexture2D_tyemr")

[node name="Shield Label" type="Label" parent="CanvasLayer/UI/Shield"]
layout_mode = 0
offset_left = -77.0
offset_top = 10.0
offset_right = 133.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(1, 1, 1, 0.556863)
theme_override_fonts/font = ExtResource("6_bjxa6")
theme_override_font_sizes/font_size = 76
text = "50"
horizontal_alignment = 2

[node name="Health" type="TextureRect" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 1018.0
offset_top = 79.0
offset_right = 1153.0
offset_bottom = 155.0
texture = SubResource("GradientTexture2D_tyemr")

[node name="Health Label" type="Label" parent="CanvasLayer/UI/Health"]
layout_mode = 0
offset_left = -77.0
offset_top = 12.0
offset_right = 133.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(1, 1, 1, 0.556863)
theme_override_fonts/font = ExtResource("6_bjxa6")
theme_override_font_sizes/font_size = 76
text = "50"
horizontal_alignment = 2

[node name="Scoreboard" parent="CanvasLayer" instance=ExtResource("5_p5rfr")]
visible = false
offset_left = 149.0
offset_top = 72.0
offset_right = 149.0
offset_bottom = 72.0
scale = Vector2(0.75, 0.75)

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("6_jfxdn")]
visible = false

[node name="Settings" parent="CanvasLayer" instance=ExtResource("7_rjult")]
visible = false
offset_left = 259.0
offset_top = 349.0
offset_right = -255.0
offset_bottom = -58.0

[node name="ReloadTimer" type="Timer" parent="."]

[node name="Gibs" parent="." instance=ExtResource("7_k7k6i")]

[node name="username" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.12752, 0)
billboard = 1
text = "USERNAME"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
process_priority = 1
replication_config = SubResource("SceneReplicationConfig_5yclh")
script = ExtResource("2_pfj5x")

[connection signal="pressed" from="DeathMenu/Respawn" to="." method="_on_respawn_pressed"]
[connection signal="pressed" from="DeathMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/QuitMenu" to="." method="_on_quit_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/QuitDesktop" to="." method="_on_quit_desktop_pressed"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]

[editable path="playerModel"]
[editable path="Camera3D/Guns/Pistol"]
[editable path="CanvasLayer/PauseMenu"]
[editable path="Gibs"]
